# nemo

./: Cargo.toml  README.md
src/: dom.rs  html.rs  main.rs
src/dom_nodes/: comment_node.rs  element_node.rs  mod.rs  node.rs  node_type.rs  text_node.rs
src/errors/: mod.rs
src/errors/tokenizer_errors/: abrupt_closing_of_empty_comment_parse_error.rs  abrupt_doctype_public_identifier_parse_error.rs  abrupt_doctype_system_identifier_parse_error.rs  absence_of_digits_in_numeric_character_reference_parse_error.rs  cdata_in_html_content_parse_error.rs  character_reference_outside_unicode_range_parse_error.rs  control_character_reference_parse_error.rs  eof_before_tag_name_parse_error.rs  eof_in_cdata_parse_error.rs  eof_in_comment_parse_error.rs  eof_in_doctype_parse_error.rs  eof_in_script_html_comment_like_text_parse_error.rs  eof_in_tag_parse_error.rs  incorrectly_closed_comment_parse_error.rs  incorrectly_opened_comment_parse_error.rs  invalid_character_sequence_after_doctype_name_parse_error.rs  invalid_first_character_of_tag_name_parse_error.rs  missed_whitespace_between_attributes_parse_error.rs  missing_attribute_value_parse_error.rs  missing_doctype_name_parse_error.rs  missing_doctype_public_identifier_parse_error.rs  missing_doctype_system_identifier_parse_error.rs  missing_end_tag_name_parse_error.rs  missing_quote_before_doctype_public_identifier_parse_error.rs  missing_quote_before_doctype_system_identifier_parse_error.rs  missing_whitespace_before_doctype_name_parse_error.rs  (+17 more)
src/tokenizer/: mod.rs
src/types/: data_states.rs  insertion_modes.rs  mod.rs
(+90 files in other folders)
