[package]
name = "nemo"
version = "0.1.0"
authors = ["Stefan Urosevic <stefanuros@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
lazy_static = "1.4.0"

[[bin]]
name = "nemo"
path = "src/main.rs"
